Updated build.gradle.kts to run unit tests